--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -16,3 +16,13 @@
 .div{
 	background: #ffffff;
 }
+
+.squaree {
+    float:left;
+    width: 100%;
+    padding-bottom : 100%; /* = width for a 1:1 aspect ratio */
+    margin:0%;
+    background-position:center center;
+    background-repeat:no-repeat;
+    background-size:cover; /* you change this to "contain" if you don't want the images to be cropped */
+}
