added home component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,12 +18,12 @@
     </div>
   </nav>
 
-  <main role="main">
+  <main role="main" style="min-height:800px">
     <router-outlet></router-outlet>
   </main>
 
   <footer class="footer">
         <div class="container">
-          <span class="text-muted">Created by Rahul Copyright 2018</span>
+          <span class="text-light">Created by Rahul Copyright 2018</span>
         </div>
   </footer>
